--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@ html{
 }
 
 ::-webkit-scrollbar-thumb {
-    background:#fdce2e79;
+    background:#f8cf4679;
     opacity: 0.5; 
 }
 
